Prevent horizontal scroll caused by app toolbar

--- a/src/app/topbar/topbar.component.styl
+++ b/src/app/topbar/topbar.component.styl
@@ -1,4 +1,5 @@
 mat-toolbar
+	overflow hidden
 	justify-content space-between
 
 .topbarLogo
